maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: ';' expected but '[' found.
        return[i,j]
              ^