maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var l=getMondeLargeur
  var L=getMondeHauteur
  
  
  
  
}

def findBiscuit():Array[Int] = {
  for (i <- 0 to l) {
    for (j <- 0 to L) {
      if (aBiscuit(i,j)) {
        return[i,j]
        
      }
    }
  }
  
  
}